# mcpbr

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.app  HUMANEVAL_FIX_SUMMARY.md  LICENSE  Makefile  NPM.md  README.md  SECURITY.md  install.sh  mcpbr.spec  mkdocs.yml  nonexistent.yaml  package.json  pyproject.toml  registry.json  requirements.txt  results_comparison_5tasks_v2_summary.md  schemaflux.yaml
.claude/: settings.json
.claude-plugin/: README.md  marketplace.json  package.json  plugin.json
.claude-plugin/skills/: README.md
.claude-plugin/skills/benchmark-swe-lite/: SKILL.md
.claude-plugin/skills/mcpbr-config/: SKILL.md
.claude-plugin/skills/mcpbr-eval/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-binaries.yml  ci.yml  deploy-site.yml  post-release-bump.yml  publish-npm.yml  publish.yml
Formula/: mcpbr.rb
action/: README.md  action.yml
action/examples/: basic.yml  matrix.yml
ci-templates/circleci/: README.md  orb.yml
ci-templates/gitlab/: .gitlab-ci-mcpbr.yml  README.md
conda/: README.md  bld.bat  build.sh  meta.yaml
config/: 11-full-minus-typescript.yaml  example.yaml  humaneval.yaml  supermodel-eval-0.9.2-test10.yaml  supermodel-eval-0.9.2.yaml  supermodel.yaml
docker/: README.md  docker-compose.yml  entrypoint.sh
docs/: FAQ.md  benchmarks.md  best-practices.md  cli.md  configuration.md  evaluation-results.md  index.md  installation.md  templates.md  timeout_tracking.md  troubleshooting.md
docs/api/: index.md
docs/benchmarks/: agentbench.md  aider-polyglot.md  apps.md  arc.md  bigbench-hard.md  bigcodebench.md  codecontests.md  codereval.md  cybergym.md  gaia.md  gsm8k.md  hellaswag.md  humaneval.md  index.md  intercode.md  leetcode.md  math.md  mbpp.md  mcptoolbench.md  mlagentbench.md  repoqa.md  swe-bench.md  terminalbench.md  toolbench.md  truthfulqa.md  webarena.md
docs/overrides/: main.html
examples/: codegraph-benchmark.yaml  custom-benchmark.yaml  env-vars-example.yaml
examples/inheritance/: README.md  base-config.yaml  dev-config.yaml  multi-extend-config.yaml  production-config.yaml  shared-mcp-settings.yaml
examples/quick-start/: test-your-mcp-server.yaml
homebrew/: README.md
scripts/: sync_version.py  validate_plugin_manifests.py
site/: .eleventy.js  benchmark.njk  category-hub.njk  category-index.njk  llms.njk  package-lock.json  package.json  robots.njk  sitemap.njk
site/_data/: benchmarks.js  categories.js  site.json
site/_includes/: base.njk  footer.njk  header.njk
site/pages/: about.njk  cli.njk  configuration.njk  index.njk  installation.njk
src/mcpbr/: __init__.py  __main__.py  agent.py  api.py  audit.py  benchmark_preflight.py  cache.py  cli.py  compat.py  config.py  config_inheritance.py  config_validator.py  custom_metrics.py  dataset_versioning.py  distributed.py  docker_env.py  docker_prewarm.py  dry_run.py  env_expansion.py  evaluation.py  failure_analysis.py  few_shot.py  gpu_support.py  graceful_degradation.py  harness.py  harnesses.py  incremental_save.py  junit_reporter.py  languages.py  latency_metrics.py  log_formatter.py  logging_config.py  models.py  multi_benchmark.py  output_validator.py  plugin_registry.py  preflight.py  pricing.py  privacy.py  profiler.py  (+16 more)
src/mcpbr/benchmarks/: __init__.py  _bench_utils.py  adversarial.py  agentbench.py  aider_polyglot.py  apps.py  arc.py  base.py  bigbench_hard.py  bigcodebench.py  codecontests.py  codegraph.py  codereval.py  custom.py  cybergym.py  deadcode.py  gaia.py  gsm8k.py  hellaswag.py  humaneval.py  intercode.py  leetcode.py  longbench.py  math_benchmark.py  mbpp.py  mcptoolbench.py  mlagentbench.py  mmmu.py  repoqa.py  swebench.py  swebench_pro.py  terminalbench.py  toolbench.py  truthfulqa.py  webarena.py
src/mcpbr/benchmarks/supermodel/: api_client.py  benchmark.py  evaluation.py  git_utils.py
src/mcpbr/benchmarks/supermodel/endpoints/: __init__.py  base.py  circular_deps.py  dead_code.py  impact_analysis.py  test_coverage.py
src/mcpbr/data/templates/: brave-search.yaml  filesystem.yaml  github.yaml  google-maps.yaml  postgres.yaml  slack.yaml  sqlite.yaml
src/mcpbr/infrastructure/: aws.py  azure.py  azure_health.py  cloudflare.py  gcp.py  gcp_health.py  k8s.py  manager.py
src/mcpbr/storage/: __init__.py  base.py  cloud.py  sqlite_backend.py
templates/: about.html  benchmark.html  cli.html  configuration.html  hub.html  index.html  installation.html  taxonomy_index.html
tests/: __init__.py  test_adversarial_benchmark.py  test_agent.py  test_api.py  test_audit.py  test_benchmark_filtering.py  test_benchmark_preflight.py  test_benchmarks.py  test_build_test_command.py  test_cache.py  test_claude_plugin.py  test_cli_templates.py  test_cloud_storage.py  test_cloud_storage_errors.py  test_cold_start.py  test_comparison_aggregation.py  test_comparison_config.py  test_comparison_integration.py  test_comparison_reporting.py  test_compat.py  test_config.py  test_config_env_vars.py  test_config_inheritance.py  test_config_validator.py  test_config_validator_inheritance.py  test_cost_calculation.py  test_custom_benchmark.py  test_custom_metrics.py  test_dataset_versioning.py  test_default_logging.py  test_distributed.py  test_django_runner.py  test_docker_cleanup.py  test_docker_label_fix.py  test_docker_retry.py  test_env_expansion.py  test_error_messages.py  test_eval_reliability.py  test_evaluation.py  test_exit_codes.py  (+55 more)
tests/infrastructure/: test_aws.py  test_azure.py  test_azure_health.py  test_cloudflare.py  test_config.py  test_gcp.py  test_k8s.py  test_resource_leaks.py
vscode-extension/: package.json
vscode-extension/src/: config.ts  extension.ts  results.ts  runner.ts
