[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpbr"
version = "0.14.1"
description = "Model Context Protocol Benchmark Runner - evaluate MCP servers against software engineering benchmarks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Grey Newell", email = "me@greynewell.com" }
]
keywords = ["mcp", "model-context-protocol", "swe-bench", "cybergym", "benchmark", "llm", "agents", "evaluation", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "docker>=7.0.0",
    "datasets>=2.14.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "paramiko>=3.4.0",
]

[project.optional-dependencies]
slack = ["slack_sdk>=3.27.0"]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "slack_sdk>=3.27.0",
    "mypy>=1.11.0",
    "types-docker",
    "types-paramiko",
    "types-PyYAML",
    "types-requests",
    "types-psutil",
]
docs = [
    # Site is now built with SchemaFlux (no Python deps needed)
]
openai = ["openai>=1.0.0"]
gemini = ["google-generativeai>=0.3.0"]
wandb = ["wandb>=0.16.0"]
all-providers = ["openai>=1.0.0", "google-generativeai>=0.3.0"]
# Note: terminal-bench package (pip install terminal-bench) can be installed
# separately if HuggingFace dataset loading fails. It requires Python 3.12+.

[project.scripts]
mcpbr = "mcpbr.cli:main"

[project.urls]
Homepage = "https://mcpbr.org/"
Repository = "https://github.com/greynewell/mcpbr"
Documentation = "https://mcpbr.org/"
Changelog = "https://github.com/greynewell/mcpbr/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/greynewell/mcpbr/issues"
Author = "https://greynewell.com"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpbr"]

[tool.hatch.build.targets.wheel.shared-data]
"src/mcpbr/data" = "mcpbr/data"

[tool.hatch.build.targets.sdist]
exclude = [
    "docs/",
    "templates/",
    "static/",
    "schemaflux.yaml",
    "site/",
    ".github/workflows/deploy-site.yml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "W",     # pycodestyle warnings
    "B",     # flake8-bugbear
    "UP",    # pyupgrade (Python 3.11+)
    "SIM",   # simplify
    "RUF",   # ruff-specific
    "C4",    # flake8-comprehensions
    "PIE",   # misc linting
    "PT",    # pytest-style
    "ASYNC", # async bugs
    "S",     # bandit (security)
    "T20",   # print detection
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # function call in default argument (Click pattern)
    "S101",    # assert usage (fine in tests)
    "S603",    # subprocess call - check for untrusted input
    "S607",    # start process with partial path
    "T201",    # print statement (CLI tool uses print)
    "SIM108",  # ternary operator (readability preference)
    "PT011",   # pytest.raises too broad
    "PT012",   # pytest.raises multiple statements
    "RUF012",  # mutable class variable (Pydantic models)
    "ASYNC109",# async function timeout param (trio-specific, not asyncio)
    "ASYNC110",# async sleep in loop (trio-specific)
    "ASYNC221",# await in async for (trio-specific)
    "ASYNC230",# open call in async function (trio-specific)
    "ASYNC240",# async generator (trio-specific)
    "ASYNC251",# async sleep in async for (trio-specific)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "T20"]
"infrastructure/**/*.py" = ["S603", "S607"]
"src/mcpbr/infrastructure/**/*.py" = ["S603", "S607", "S108"]
"scripts/**/*.py" = ["T20", "S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "datasets",
    "datasets.*",
    "google.generativeai",
    "google.generativeai.*",
    "wandb",
    "wandb.*",
    "slack_sdk",
    "slack_sdk.*",
    "uvicorn",
    "uvicorn.*",
    "fastapi",
    "fastapi.*",
    "tomli",
    "tomli.*",
    "weasyprint",
    "weasyprint.*",
    "terminal_bench",
    "terminal_bench.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "mcpbr.models",
    "mcpbr.config",
    "mcpbr.evaluation",
    "mcpbr.pricing",
]
disallow_untyped_defs = true
warn_unused_ignores = true
